--- a/abhi/index.html
+++ b/abhi/index.html
@@ -296,7 +296,7 @@
                 
                 <h1 id="features">Features</h1>
 <p><div align="center">
-<img align="right " width="100" height="100" src="an/images/auto.png">
+<img align="right " width="100" height="100" src="/an/images/auto.png">
 </div></p>
 <ul>
 <li>Data sets automatically analyzed</li>
