--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 
                 <h1 id="introduction">Introduction</h1>
 <div align="center">
-<img align="right " width="100" height="100" src="/images/ineu.png">
+<img align="right " width="100" height="100" src="images/ineu.png">
 </div>
 
 <div>
