--- a/userguide/index.html
+++ b/userguide/index.html
@@ -301,7 +301,7 @@
 <li>Tutorial to demonstrate the installation process </li>
 <li><code>pip install autoneuro</code></li>
 <li>To read and load data from various 
-     <div align="center"><img align="right " src="images/dataread.png"></div><ul>
+     <div align="center"><img src="images/dataread.png"></div><ul>
 <li>explanation</li>
 </ul>
 </li>
